Don't require the discrete GPU on MacBook Pro models from early 2011 and later, on OS X Lion or later.
http://developer.apple.com/library/mac/#qa/qa1734/_index.html

--- a/Source/Info-Pester.plist
+++ b/Source/Info-Pester.plist
@@ -53,5 +53,7 @@ wl25FfzK7r8uG9e0lbz1mJuuhJfS0HnIrgmHdo+Vuv18HRAO1Q1NRPvGK2CsC2uX
 YSz77RTaBpnV48SKS36fulgcQNKHllEG/MtdHn66TLLHplNai8XvAvCC6H/0yKHF
 ncNZEp14qWoKVKn3CXk=
 -----END PUBLIC KEY-----</string>
+	<key>NSSupportsAutomaticGraphicsSwitching</key>
+	<true/>
 </dict>
 </plist>
