Remove (duplicate) product name and version from InfoPlist.strings.
Move copyright into Info.plist.

They never needed to be there - likely a leftover from a long-ago template - and the version needed to be updated manually rather than with agvtool.

--- a/Source/Info-Pester.plist
+++ b/Source/Info-Pester.plist
@@ -55,5 +55,7 @@ ncNZEp14qWoKVKn3CXk=
 -----END PUBLIC KEY-----</string>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
 	<true/>
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2002–13 Nicholas Riley</string>
 </dict>
 </plist>
