Generate and process errors on alarm/alert restoration.
Errors are used in a somewhat nonstandard fashion in places: partially restored (yet valid) objects are returned, along with an error.

We're still using a mixture of exceptions and errors here, united by Wolf Rentzsch's JRErr.  Eventually the NSAsserts should be replaced by something better, though still exceptions.

Rename -[PSAlarm resetTimer] to -[PSAlarm restoreTimer]; the previous name was technically correct but confusing; the current one is also consistent with usage in PSAlarms.

Add tests for alarm/alert restoration.

Fix some wording when describing what to do when no alerts are enabled.  (This should logically have been a separate change.)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "Sparkle"]
 	path = Source/Sparkle
 	url = https://github.com/nriley/Sparkle.git
+[submodule "Source/JRErr"]
+	path = Source/JRErr
+	url = https://github.com/nriley/JRErr.git
+	branch = pester
