--- a/Source/PesterTest/PesterTest-Info.plist
+++ b/Source/PesterTest/PesterTest-Info.plist
@@ -13,10 +13,10 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1b17</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>51</string>
+	<string>52</string>
 </dict>
 </plist>
