Update with Xcode 5.0.2 to OS X 10.8 SDK.
Deployment target is still 10.6 (except for libParseDate-10.7, of course).

--- a/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
+++ b/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
@@ -95,6 +95,15 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E1B11EE30CF5F30F004975AA"
+            BuildableName = "Pester.app"
+            BlueprintName = "Pester"
+            ReferencedContainer = "container:Pester.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
