--- a/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
+++ b/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E11E00BB17BEE2E900BA997C"
-               BuildableName = "PesterTest.octest"
+               BuildableName = "PesterTest.xctest"
                BlueprintName = "PesterTest"
                ReferencedContainer = "container:Pester.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E11E00BB17BEE2E900BA997C"
-               BuildableName = "PesterTest.octest"
+               BuildableName = "PesterTest.xctest"
                BlueprintName = "PesterTest"
                ReferencedContainer = "container:Pester.xcodeproj">
             </BuildableReference>
