Run ParseDateTest in the Pester scheme.
Currently failing due to Date::Manip issues, hopefully soon to be resolved.

--- a/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
+++ b/Source/Pester.xcodeproj/xcshareddata/xcschemes/Pester.xcscheme
@@ -52,6 +52,16 @@
                ReferencedContainer = "container:Pester.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E175B0741A3DC0D700072594"
+               BuildableName = "ParseDateTest.xctest"
+               BlueprintName = "ParseDateTest"
+               ReferencedContainer = "container:Pester.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <EnvironmentVariables>
          <EnvironmentVariable
