--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Sparkle"]
 	path = Source/Sparkle
-	url = https://github.com/nriley/Sparkle.git
+	url = https://github.com/sparkle-project/Sparkle.git
 [submodule "Source/JRErr"]
 	path = Source/JRErr
 	url = https://github.com/nriley/JRErr.git
