Mark OmniOutliner HTML output as generated (which it is).
Seems that GitHub is parsing correctly even though linguist locally isn’t. Yay!

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 Documentation/* linguist-documentation
+*.html linguist-generated
 Source/*.eps linguist-generated
 Source/Manip.pm linguist-vendored
 Source/Manip/* linguist-vendored
