Packaging script changes, mostly from NewsBlur Helper.
Use modern archiving process rather than ancient install hack.

Sign the disk image to avoid translocation.

Built products and archives now end up in their own directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-build
-xcbaselines
 xcuserdata
+Archives/
+Releases/*.dmg
 .DS_Store
-*.pbxuser
-*.xccheckout
 *.xcscmblueprint
 *~
 \#*
 .\#*
-.idea
-Pester ?.*
-Pester-*.dmg
-updates-1.1b14.xml
